--- a/.github/workflows/JDC-AX1800-PRO.yml
+++ b/.github/workflows/JDC-AX1800-PRO.yml
@@ -23,7 +23,7 @@ on:
 permissions:
   contents: write
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt.git
+  REPO_URL: https://github.com/breeze303/ipq60xx-6.1.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config-jdc
