--- a/configs/ipq60xx-6.6-wifi(emmc).config
+++ b/configs/ipq60xx-6.6-wifi(emmc).config
@@ -3047,7 +3047,7 @@ CONFIG_PACKAGE_kmod-usb-net-mcs7830=y
 CONFIG_PACKAGE_kmod-usb-net-pegasus=y
 CONFIG_PACKAGE_kmod-usb-net-pl=y
 CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
-CONFIG_PACKAGE_kmod-usb-net-qmi-wwan-fibocom=y
+# CONFIG_PACKAGE_kmod-usb-net-qmi-wwan-fibocom not set
 CONFIG_PACKAGE_kmod-usb-net-qmi-wwan-quectel=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8150=y
