--- a/.github/workflows/IPQ60XX-6.6-WIFI.yml
+++ b/.github/workflows/IPQ60XX-6.6-WIFI.yml
@@ -6,7 +6,7 @@ on:
     - cron: 0 19 * * *
 
 env:
-  REPO_URL: https://github.com/openwrt-ipq60xx/openwrt-legacy.git
+  REPO_URL: https://downloads.openwrt.org/snapshots
   REPO_BRANCH: main
   CONFIG_FILE: configs/ipq60xx-6.6-wifi2.config
   DIY_SCRIPT: diy-script.sh
